# bayesian-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-hardware.txt  requirements-uncertainty.txt  requirements.txt
bayesian_optimization/: __init__.py  base.py  scalar_ei.py  space.py  uncertainty.py
bayesian_optimization/microfluidics/: README.md  __init__.py  client.py  mixer.py  printer3d.py  recipes.py  schedule_io.py  schedule_runner.py  tube_coordinates.py
examples/: __init__.py
examples/Au_multispectral/: __init__.py  campaign.py  demo_run.py  eval_gp.py  plots.py  prepare_data.py
examples/Au_multispectral/data/: best_features_with_flows.csv  experiment_history.csv
examples/Au_multispectral_synthetic/: au_multispectral_synthetic.ipynb
examples/Au_multispectral_synthetic/data/: training_ready.csv
examples/SLNP_bayes/: bayes_mf_loop.ipynb  sample_config.yml
examples/SLNP_bayes/data_bayes/: recipes_iter_000.csv  recipes_iter_000_results.csv
examples/printer_calibration/: printer_calibration.ipynb
examples/synthetic_test_slnp/: synthetic_bayes_loop.ipynb
examples/synthetic_test_slnp/data_bayes/: all_results.csv  all_scored_history.csv  ground_truth.csv  ground_truth.json  recipes_iter_000.csv  recipes_iter_000_results.csv  recipes_iter_001.csv  recipes_iter_001_results.csv  recipes_iter_002.csv  recipes_iter_002_results.csv  recipes_iter_003.csv  (+6 more)
smart_pump_overrides/: communicator.py  pumps.py
tests/: test_scalar_ei.py  test_schedule_io.py  test_space.py  test_uncertainty_smoke.py
tests/fixtures/: recipes_iter_000_results.csv
