[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-optimization"
version = "0.1.0"
description = "Unified Bayesian suggestion API: ProcessOptimizer scalar EI (microfluidics) and GPyTorch uncertainty sampling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smartfluidics" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "ProcessOptimizer>=0.9.0",
]

[project.optional-dependencies]
uncertainty = [
    "torch>=2.0",
    "gpytorch>=1.11",
    "matplotlib>=3.7",
]
hardware = [
    # Private index required for smart_pump — see requirements-hardware.txt / README
    "smart_pump",
    "pyserial>=3.5",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/smartfluidics/bayesian-optimization"
Repository = "https://github.com/smartfluidics/bayesian-optimization"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayesian_optimization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
